@@ -4706,6 +4706,30 @@ condition|(
 name|traverse
 condition|)
 block|{
+name|traverse
+argument_list|(
+name|conf
+argument_list|,
+name|depNode
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|dependencies
+return|;
+block|}
+specifier|public
+name|void
+name|traverse
+parameter_list|(
+name|String
+name|conf
+parameter_list|,
+name|IvyNode
+name|depNode
+parameter_list|)
+block|{
 if|if
 condition|(
 name|getPath
@@ -4768,11 +4792,6 @@ name|_data
 operator|=
 name|_data
 expr_stmt|;
-block|}
-block|}
-return|return
-name|dependencies
-return|;
 block|}
 specifier|private
 name|ModuleRevisionId
