@@ -4645,6 +4645,108 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveDefaultWithArtifacts
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// mod1.6 depends on
+comment|//   mod1.4, which depends on mod1.3 and selects one of its artifacts
+comment|//   mod1.3 and selects two of its artifacts
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.6/ivys/ivy-1.0.3.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|,
+literal|"mod1.3-A"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|,
+literal|"mod1.3-B"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveDefaultWithArtifactsConf1
 parameter_list|()
 throws|throws
