@@ -1,0 +1,13 @@
+<ivy-module version="1.0">
+	<info organisation="org1"
+	       module="mod1.6"
+	       revision="1.0.3"
+	/> 
+	<dependencies>
+		<dependency name="mod1.4" rev="1.3" />
+		<dependency name="mod1.3" rev="3.0">
+			<artifact name="mod1.3-A" type="jar" />
+			<artifact name="mod1.3-B" type="jar" />
+		</dependency>
+	</dependencies>
+</ivy-module>
